--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,10 +2,14 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "redis": "^4.1.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
@@ -17,6 +21,7 @@
     "rsuite": "^5.15.0",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
