--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "engines": {
-    "npm": ">=7.0.0",
+    "npm": ">=8.3.0",
     "node": ">=16.0.0"
   },
   "private": true,
@@ -11,19 +11,24 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "redis": "^4.1.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "redis": "^4.1.0",
     "rsuite": "^5.15.0",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "react-circular-progressbar": {
+      "react": "18"
+    }
   },
   "proxy": "http://localhost:3001",
   "scripts": {
