--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "proxy": "http://localhost:3001",
   "scripts": {
     "postinstall": "npm run build",
+    "build": "react-scripts build",
     "start": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
