--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "postinstall": "npm run build",
     "build": "react-scripts build",
+    "dev": "react-scripts start",
     "start": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
